--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Indian Geography Online MCQ Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
     .quiz-container { background: #fff; padding: 24px; max-width: 600px; margin: 40px auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
@@ -49,108 +50,102 @@
         question: "Which city is called the 'Pink City'?",
         options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
         answer: 2
+      },
+      {
+        question: "Which is the longest river that originates in India?",
+        options: ["Yamuna", "Ganga", "Godavari", "Narmada"],
+        answer: 1
+      },
+      {
+        question: "Which Indian coast is known as the 'Land of Temples'?",
+        options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"],
+        answer: 1
+      },
+      {
+        question: "What is the highest peak of peninsular India?",
+        options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"],
+        answer: 0
+      },
+      {
+        question: "Which state is the sole producer of agate, chalk, and perlite in India?",
+        options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"],
+        answer: 2
+      },
+      {
+        question: "Where was India's first steel factory established?",
+        options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"],
+        answer: 0
+      },
+      {
+        question: "Which desert is the largest in India?",
+        options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"],
+        answer: 0
+      },
+      {
+        question: "Which city is known as the 'City of Lakes' in India?",
+        options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"],
+        answer: 0
+      },
+      {
+        question: "Which of the following is the longest mountain range in India?",
+        options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"],
+        answer: 0
+      },
+      {
+        question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?",
+        options: ["Kosi", "Ganga", "Yamuna", "Sone"],
+        answer: 0
+      },
+      {
+        question: "Which state has the largest area in India?",
+        options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"],
+        answer: 1
+      },
+      {
+        question: "Which Indian state is famous for the 'Backwaters'?",
+        options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"],
+        answer: 0
+      },
+      {
+        question: "The Sundarbans mangrove forest is located in which Indian state?",
+        options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"],
+        answer: 0
+      },
+      {
+        question: "Which city is known as the 'Manchester of India'?",
+        options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"],
+        answer: 2
+      },
+      {
+        question: "Which plateau is known as the 'Roof of the World' in India?",
+        options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"],
+        answer: 3
+      },
+      {
+        question: "Which Indian state is the leading producer of tea?",
+        options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"],
+        answer: 0
+      },
+      {
+        question: "Which river forms the famous 'Dhuandhar Falls'?",
+        options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"],
+        answer: 0
+      },
+      {
+        question: "Which city is the capital of the Indian state of Gujarat?",
+        options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"],
+        answer: 2
+      },
+      {
+        question: "Which Indian state is known as the 'Land of Five Rivers'?",
+        options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"],
+        answer: 0
+      },
+      {
+        question: "Which Indian state has the largest coastline?",
+        options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"],
+        answer: 1
       }
-      [
-  {
-    question: "Which city is called the 'Pink City'?",
-    options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
-    answer: 2
-  },
-  {
-    question: "Which is the longest river that originates in India?",
-    options: ["Yamuna", "Ganga", "Godavari", "Narmada"],
-    answer: 1
-  },
-  {
-    question: "Which Indian coast is known as the 'Land of Temples'?",
-    options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"],
-    answer: 1
-  },
-  {
-    question: "What is the highest peak of peninsular India?",
-    options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"],
-    answer: 0
-  },
-  {
-    question: "Which state is the sole producer of agate, chalk, and perlite in India?",
-    options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"],
-    answer: 2
-  },
-  {
-    question: "Where was India's first steel factory established?",
-    options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"],
-    answer: 0
-  },
-  {
-    question: "Which desert is the largest in India?",
-    options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"],
-    answer: 0
-  },
-  {
-    question: "Which city is known as the 'City of Lakes' in India?",
-    options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"],
-    answer: 0
-  },
-  {
-    question: "Which of the following is the longest mountain range in India?",
-    options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"],
-    answer: 0
-  },
-  {
-    question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?",
-    options: ["Kosi", "Ganga", "Yamuna", "Sone"],
-    answer: 0
-  },
-  {
-    question: "Which state has the largest area in India?",
-    options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"],
-    answer: 1
-  },
-  {
-    question: "Which Indian state is famous for the 'Backwaters'?",
-    options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"],
-    answer: 0
-  },
-  {
-    question: "The Sundarbans mangrove forest is located in which Indian state?",
-    options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"],
-    answer: 0
-  },
-  {
-    question: "Which city is known as the 'Manchester of India'?",
-    options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"],
-    answer: 2
-  },
-  {
-    question: "Which plateau is known as the 'Roof of the World' in India?",
-    options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"],
-    answer: 3
-  },
-  {
-    question: "Which Indian state is the leading producer of tea?",
-    options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"],
-    answer: 0
-  },
-  {
-    question: "Which river forms the famous 'Dhuandhar Falls'?",
-    options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"],
-    answer: 0
-  },
-  {
-    question: "Which city is the capital of the Indian state of Gujarat?",
-    options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"],
-    answer: 2
-  },
-  {
-    question: "Which Indian state is known as the 'Land of Five Rivers'?",
-    options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"],
-    answer: 0
-  },
-  {
-    question: "Which Indian state has the largest coastline?",
-    options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"],
-    answer: 1
-  }
     ];
 
     function shuffle(array) {
