--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -15,6 +15,10 @@
     .score { font-weight: bold; color: #1a8917; }
     .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
     .next-btn:disabled { background: #aaa; }
+    .heatmap { margin-top: 32px; }
+    .heatmap-bar { display: flex; align-items: center; margin-bottom: 8px; }
+    .heatmap-label { width: 120px; }
+    .heatmap-value { width: 200px; height: 20px; border-radius: 4px; margin-left: 8px; }
   </style>
 </head>
 <body>
@@ -25,129 +29,44 @@
     <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
   </div>
   <script>
+    // --- Question Bank with Sections ---
     const questions = [
-      {
-        question: "Which river is known as the lifeline of North India?",
-        options: ["Yamuna", "Ganga", "Indus", "Beas"],
-        answer: 1
-      },
-      {
-        question: "What is the capital of Kerala?",
-        options: ["Kochi", "Thiruvananthapuram", "Calicut", "Kannur"],
-        answer: 1
-      },
-      {
-        question: "Which state is known as the 'Heart of India'?",
-        options: ["Madhya Pradesh", "Chhattisgarh", "Uttar Pradesh", "Maharashtra"],
-        answer: 0
-      },
-      {
-        question: "Kaziranga National Park is famous for which animal?",
-        options: ["Tiger", "Elephant", "One-horned Rhinoceros", "Leopard"],
-        answer: 2
-      },
-      {
-        question: "Which city is called the 'Pink City'?",
-        options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"],
-        answer: 2
-      },
-      {
-        question: "Which is the longest river that originates in India?",
-        options: ["Yamuna", "Ganga", "Godavari", "Narmada"],
-        answer: 1
-      },
-      {
-        question: "Which Indian coast is known as the 'Land of Temples'?",
-        options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"],
-        answer: 1
-      },
-      {
-        question: "What is the highest peak of peninsular India?",
-        options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"],
-        answer: 0
-      },
-      {
-        question: "Which state is the sole producer of agate, chalk, and perlite in India?",
-        options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"],
-        answer: 2
-      },
-      {
-        question: "Where was India's first steel factory established?",
-        options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"],
-        answer: 0
-      },
-      {
-        question: "Which desert is the largest in India?",
-        options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"],
-        answer: 0
-      },
-      {
-        question: "Which city is known as the 'City of Lakes' in India?",
-        options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"],
-        answer: 0
-      },
-      {
-        question: "Which of the following is the longest mountain range in India?",
-        options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"],
-        answer: 0
-      },
-      {
-        question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?",
-        options: ["Kosi", "Ganga", "Yamuna", "Sone"],
-        answer: 0
-      },
-      {
-        question: "Which state has the largest area in India?",
-        options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"],
-        answer: 1
-      },
-      {
-        question: "Which Indian state is famous for the 'Backwaters'?",
-        options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"],
-        answer: 0
-      },
-      {
-        question: "The Sundarbans mangrove forest is located in which Indian state?",
-        options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"],
-        answer: 0
-      },
-      {
-        question: "Which city is known as the 'Manchester of India'?",
-        options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"],
-        answer: 2
-      },
-      {
-        question: "Which plateau is known as the 'Roof of the World' in India?",
-        options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"],
-        answer: 3
-      },
-      {
-        question: "Which Indian state is the leading producer of tea?",
-        options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"],
-        answer: 0
-      },
-      {
-        question: "Which river forms the famous 'Dhuandhar Falls'?",
-        options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"],
-        answer: 0
-      },
-      {
-        question: "Which city is the capital of the Indian state of Gujarat?",
-        options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"],
-        answer: 2
-      },
-      {
-        question: "Which Indian state is known as the 'Land of Five Rivers'?",
-        options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"],
-        answer: 0
-      },
-      {
-        question: "Which Indian state has the largest coastline?",
-        options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"],
-        answer: 1
-      }
+      { section: "Rivers", question: "Which river is known as the lifeline of North India?", options: ["Yamuna", "Ganga", "Indus", "Beas"], answer: 1 },
+      { section: "Capitals", question: "What is the capital of Kerala?", options: ["Kochi", "Thiruvananthapuram", "Calicut", "Kannur"], answer: 1 },
+      { section: "States", question: "Which state is known as the 'Heart of India'?", options: ["Madhya Pradesh", "Chhattisgarh", "Uttar Pradesh", "Maharashtra"], answer: 0 },
+      { section: "Wildlife", question: "Kaziranga National Park is famous for which animal?", options: ["Tiger", "Elephant", "One-horned Rhinoceros", "Leopard"], answer: 2 },
+      { section: "Cities", question: "Which city is called the 'Pink City'?", options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"], answer: 2 },
+      { section: "Rivers", question: "Which is the longest river that originates in India?", options: ["Yamuna", "Ganga", "Godavari", "Narmada"], answer: 1 },
+      { section: "Coasts", question: "Which Indian coast is known as the 'Land of Temples'?", options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"], answer: 1 },
+      { section: "Mountains", question: "What is the highest peak of peninsular India?", options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"], answer: 0 },
+      { section: "Minerals", question: "Which state is the sole producer of agate, chalk, and perlite in India?", options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"], answer: 2 },
+      { section: "Industry", question: "Where was India's first steel factory established?", options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"], answer: 0 },
+      { section: "Deserts", question: "Which desert is the largest in India?", options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"], answer: 0 },
+      { section: "Cities", question: "Which city is known as the 'City of Lakes' in India?", options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"], answer: 0 },
+      { section: "Mountains", question: "Which of the following is the longest mountain range in India?", options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"], answer: 0 },
+      { section: "Rivers", question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?", options: ["Kosi", "Ganga", "Yamuna", "Sone"], answer: 0 },
+      { section: "States", question: "Which state has the largest area in India?", options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"], answer: 1 },
+      { section: "States", question: "Which Indian state is famous for the 'Backwaters'?", options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"], answer: 0 },
+      { section: "Wildlife", question: "The Sundarbans mangrove forest is located in which Indian state?", options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"], answer: 0 },
+      { section: "Cities", question: "Which city is known as the 'Manchester of India'?", options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"], answer: 2 },
+      { section: "Mountains", question: "Which plateau is known as the 'Roof of the World' in India?", options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"], answer: 3 },
+      { section: "Agriculture", question: "Which Indian state is the leading producer of tea?", options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"], answer: 0 },
+      { section: "Rivers", question: "Which river forms the famous 'Dhuandhar Falls'?", options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"], answer: 0 },
+      { section: "Capitals", question: "Which city is the capital of the Indian state of Gujarat?", options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"], answer: 2 },
+      { section: "States", question: "Which Indian state is known as the 'Land of Five Rivers'?", options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"], answer: 0 },
+      { section: "States", question: "Which Indian state has the largest coastline?", options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"], answer: 1 }
     ];
 
+    // --- State Variables ---
+    let allIndexes = Array.from(questions.keys());
+    let usedIndexes = [];
+    let currentSessionIndexes = [];
+    let currentQuestion = 0;
+    let score = 0;
+    let answered = false;
+    let sectionStats = {};
+
+    // --- Utility Functions ---
     function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
@@ -156,11 +75,21 @@
       return array;
     }
 
-    let shuffledQuestions, currentQuestion, score, answered;
+    function pickNext10Indexes() {
+      // Remove already used indexes from allIndexes
+      const remainingIndexes = allIndexes.filter(idx => !usedIndexes.includes(idx));
+      const next10 = remainingIndexes.slice(0, 10);
+      // If not enough left, reshuffle and start over
+      if (next10.length < 10) {
+        usedIndexes = [];
+        return pickNext10Indexes();
+      }
+      return next10;
+    }
 
     function showQuestion() {
       answered = false;
-      const q = shuffledQuestions[currentQuestion];
+      const q = questions[currentSessionIndexes[currentQuestion]];
       document.getElementById('question').textContent = `Q${currentQuestion+1}: ${q.question}`;
       const optionsDiv = document.getElementById('options');
       optionsDiv.innerHTML = '';
@@ -177,21 +106,26 @@
     function checkAnswer(selectedIdx, btn) {
       if (answered) return;
       answered = true;
-      const q = shuffledQuestions[currentQuestion];
+      const qIdx = currentSessionIndexes[currentQuestion];
+      const q = questions[qIdx];
       const optionsDiv = document.getElementById('options');
       Array.from(optionsDiv.children).forEach((b, idx) => {
         b.disabled = true;
         if(idx === q.answer) b.style.background = '#a5d6a7';
         if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a';
       });
+      // Track section-wise stats
+      if (!sectionStats[q.section]) sectionStats[q.section] = { correct: 0, total: 0 };
+      sectionStats[q.section].total++;
       if (selectedIdx === q.answer) {
         document.getElementById('result').innerHTML = '<span style="color:green;">Correct!</span>';
         score++;
+        sectionStats[q.section].correct++;
       } else {
         document.getElementById('result').innerHTML = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
       }
       document.getElementById('nextBtn').style.display = 'inline-block';
-      if(currentQuestion === shuffledQuestions.length - 1) {
+      if(currentQuestion === currentSessionIndexes.length - 1) {
         document.getElementById('nextBtn').textContent = "Show Score";
       } else {
         document.getElementById('nextBtn').textContent = "Next";
@@ -200,7 +134,7 @@
 
     document.getElementById('nextBtn').onclick = function() {
       currentQuestion++;
-      if(currentQuestion < shuffledQuestions.length) {
+      if(currentQuestion < currentSessionIndexes.length) {
         showQuestion();
       } else {
         showResult();
@@ -208,17 +142,40 @@
     };
 
     function showResult() {
+      // Mark these indexes as used
+      usedIndexes = usedIndexes.concat(currentSessionIndexes);
+      // Build heat map
+      let heatmapHTML = `<div class="heatmap"><h3>Section-wise Performance</h3>`;
+      for (const section in sectionStats) {
+        const stat = sectionStats[section];
+        const percent = stat.total ? Math.round((stat.correct / stat.total) * 100) : 0;
+        let color = "#ef9a9a"; // red
+        if (percent >= 80) color = "#a5d6a7"; // green
+        else if (percent >= 50) color = "#fff59d"; // yellow
+        heatmapHTML += `
+          <div class="heatmap-bar">
+            <span class="heatmap-label">${section}</span>
+            <div class="heatmap-value" style="background:${color};width:${percent*2}px"></div>
+            <span style="margin-left:8px;">${percent}%</span>
+          </div>
+        `;
+      }
+      heatmapHTML += `</div>`;
       document.getElementById('quizContainer').innerHTML =
         `<h2>Quiz Completed!</h2>
-         <p class="score">Your Score: ${score} / ${shuffledQuestions.length}</p>
-         <button onclick="resetQuiz()">Restart Quiz</button>`;
+         <p class="score">Your Score: ${score} / ${currentSessionIndexes.length}</p>
+         ${heatmapHTML}
+         <button onclick="resetQuiz()">Next 10 Questions</button>`;
     }
 
     function resetQuiz() {
-      shuffledQuestions = shuffle([...questions]);
+      // Pick next 10 indexes, reshuffle if needed
+      currentSessionIndexes = shuffle(pickNext10Indexes());
       currentQuestion = 0;
       score = 0;
       answered = false;
+      // Only reset sectionStats if all questions have been cycled
+      if (usedIndexes.length === 0) sectionStats = {};
       // Restore the original quiz HTML structure
       document.getElementById('quizContainer').innerHTML = `
         <div id="question" class="question"></div>
@@ -228,7 +185,7 @@
       `;
       document.getElementById('nextBtn').onclick = function() {
         currentQuestion++;
-        if(currentQuestion < shuffledQuestions.length) {
+        if(currentQuestion < currentSessionIndexes.length) {
           showQuestion();
         } else {
           showResult();
@@ -237,7 +194,9 @@
       showQuestion();
     }
 
-    // Initialize the quiz on page load
+    // --- Initialize the quiz on page load ---
+    // Shuffle allIndexes for random order across sessions
+    allIndexes = shuffle(allIndexes);
     resetQuiz();
   </script>
 </body>
