--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Indian Geography Online MCQ Quiz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- jsPDF and autotable CDN -->
+  <!-- jsPDF CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
     .quiz-container { background: #fff; padding: 24px; max-width: 600px; margin: 40px auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
@@ -16,13 +15,10 @@
     .options button { display: block; width: 100%; padding: 10px; margin: 6px 0; border: none; background: #e2e2e2; cursor: pointer; border-radius: 4px; font-size: 1em; }
     .options button:hover { background: #d4d4d4; }
     .result { font-size: 1.1em; margin-top: 20px; }
+    .tip { font-size: 0.96em; color: #444; margin-top: 10px; background: #f1f8e9; padding: 8px 12px; border-radius: 5px; }
     .score { font-weight: bold; color: #1a8917; }
     .next-btn { margin-top: 16px; padding: 10px 18px; font-size: 1em; border: none; border-radius: 4px; background: #007bff; color: #fff; cursor: pointer; }
     .next-btn:disabled { background: #aaa; }
-    .heatmap { margin-top: 32px; }
-    .heatmap-bar { display: flex; align-items: center; margin-bottom: 8px; }
-    .heatmap-label { width: 160px; }
-    .heatmap-value { width: 200px; height: 20px; border-radius: 4px; margin-left: 8px; }
   </style>
 </head>
 <body>
@@ -33,74 +29,63 @@
     <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
   </div>
   <script>
-    // --- Question Bank with Sections ---
+    // The new questions with tips
     const questions = [
-      { section: "Rivers", question: "Which river is known as the lifeline of North India?", options: ["Yamuna", "Ganga", "Indus", "Beas"], answer: 1 },
-      { section: "Capitals", question: "What is the capital of Kerala?", options: ["Kochi", "Thiruvananthapuram", "Calicut", "Kannur"], answer: 1 },
-      { section: "States", question: "Which state is known as the 'Heart of India'?", options: ["Madhya Pradesh", "Chhattisgarh", "Uttar Pradesh", "Maharashtra"], answer: 0 },
-      { section: "Wildlife", question: "Kaziranga National Park is famous for which animal?", options: ["Tiger", "Elephant", "One-horned Rhinoceros", "Leopard"], answer: 2 },
-      { section: "Cities", question: "Which city is called the 'Pink City'?", options: ["Udaipur", "Jodhpur", "Jaipur", "Ajmer"], answer: 2 },
-      { section: "Rivers", question: "Which is the longest river that originates in India?", options: ["Yamuna", "Ganga", "Godavari", "Narmada"], answer: 1 },
-      { section: "Coasts", question: "Which Indian coast is known as the 'Land of Temples'?", options: ["Malabar Coast", "Coromandel Coast", "Konkan Coast", "Northern Circars"], answer: 1 },
-      { section: "Mountains", question: "What is the highest peak of peninsular India?", options: ["Anai Peak", "Doddabetta", "Kangchenjunga", "Nanda Devi"], answer: 0 },
-      { section: "Minerals", question: "Which state is the sole producer of agate, chalk, and perlite in India?", options: ["Rajasthan", "Madhya Pradesh", "Gujarat", "Jharkhand"], answer: 2 },
-      { section: "Industry", question: "Where was India's first steel factory established?", options: ["Jamshedpur", "Bhilai", "Rourkela", "Durgapur"], answer: 0 },
-      { section: "Deserts", question: "Which desert is the largest in India?", options: ["Thar Desert", "Rann of Kutch", "Great Indian Desert", "Cold Desert"], answer: 0 },
-      { section: "Cities", question: "Which city is known as the 'City of Lakes' in India?", options: ["Bhopal", "Udaipur", "Hyderabad", "Chennai"], answer: 0 },
-      { section: "Mountains", question: "Which of the following is the longest mountain range in India?", options: ["Himalayas", "Aravalli", "Western Ghats", "Eastern Ghats"], answer: 0 },
-      { section: "Rivers", question: "Which river is known as the 'Sorrow of Bihar' due to frequent floods?", options: ["Kosi", "Ganga", "Yamuna", "Sone"], answer: 0 },
-      { section: "States", question: "Which state has the largest area in India?", options: ["Maharashtra", "Rajasthan", "Uttar Pradesh", "Madhya Pradesh"], answer: 1 },
-      { section: "States", question: "Which Indian state is famous for the 'Backwaters'?", options: ["Kerala", "Goa", "Tamil Nadu", "Karnataka"], answer: 0 },
-      { section: "Wildlife", question: "The Sundarbans mangrove forest is located in which Indian state?", options: ["West Bengal", "Odisha", "Andhra Pradesh", "Tamil Nadu"], answer: 0 },
-      { section: "Cities", question: "Which city is known as the 'Manchester of India'?", options: ["Mumbai", "Surat", "Ahmedabad", "Chennai"], answer: 2 },
-      { section: "Mountains", question: "Which plateau is known as the 'Roof of the World' in India?", options: ["Deccan Plateau", "Chota Nagpur Plateau", "Tibetan Plateau", "Ladakh Plateau"], answer: 3 },
-      { section: "Agriculture", question: "Which Indian state is the leading producer of tea?", options: ["Assam", "West Bengal", "Kerala", "Tamil Nadu"], answer: 0 },
-      { section: "Rivers", question: "Which river forms the famous 'Dhuandhar Falls'?", options: ["Narmada", "Tungabhadra", "Godavari", "Cauvery"], answer: 0 },
-      { section: "Capitals", question: "Which city is the capital of the Indian state of Gujarat?", options: ["Ahmedabad", "Surat", "Gandhinagar", "Vadodara"], answer: 2 },
-      { section: "States", question: "Which Indian state is known as the 'Land of Five Rivers'?", options: ["Punjab", "Haryana", "Rajasthan", "Uttar Pradesh"], answer: 0 },
-      { section: "States", question: "Which Indian state has the largest coastline?", options: ["Tamil Nadu", "Gujarat", "Andhra Pradesh", "Maharashtra"], answer: 1 },
-      // --- New Questions Below ---
-      { section: "Rivers", question: "Which river is known as the 'Dakshina Ganga' or 'Ganga of the South'?", options: ["Godavari", "Krishna", "Cauvery", "Mahanadi"], answer: 0 },
-      { section: "States", question: "Which Indian state shares its borders with the maximum number of other states?", options: ["Madhya Pradesh", "Uttar Pradesh", "Chhattisgarh", "Bihar"], answer: 1 },
-      { section: "Capitals", question: "What is the capital of Arunachal Pradesh?", options: ["Itanagar", "Dispur", "Aizawl", "Imphal"], answer: 0 },
-      { section: "Mountains", question: "Which mountain pass connects Srinagar to Leh?", options: ["Nathu La", "Rohtang Pass", "Zoji La", "Shipki La"], answer: 2 },
-      { section: "Lakes", question: "Which is the largest freshwater lake in India?", options: ["Vembanad", "Chilika", "Wular", "Loktak"], answer: 2 },
-      { section: "States", question: "Which Indian state has the highest population density?", options: ["Kerala", "West Bengal", "Bihar", "Uttar Pradesh"], answer: 2 }
+      {
+        question: "Which river is known as the 'Dakshina Ganga' or 'Ganga of the South'?",
+        options: ["Godavari", "Krishna", "Cauvery", "Mahanadi"],
+        answer: 0,
+        tip: "The Godavari is the second longest river in India and is revered in the south much like the Ganga in the north."
+      },
+      {
+        question: "Which Indian state shares its borders with the maximum number of other states?",
+        options: ["Madhya Pradesh", "Uttar Pradesh", "Chhattisgarh", "Bihar"],
+        answer: 1,
+        tip: "Uttar Pradesh touches 9 states and Nepal—making it India's most 'connected' state by borders!"
+      },
+      {
+        question: "What is the capital of Arunachal Pradesh?",
+        options: ["Itanagar", "Dispur", "Aizawl", "Imphal"],
+        answer: 0,
+        tip: "Itanagar is named after the historical Ita Fort, meaning 'fort of bricks'."
+      },
+      {
+        question: "Which mountain pass connects Srinagar to Leh?",
+        options: ["Nathu La", "Rohtang Pass", "Zoji La", "Shipki La"],
+        answer: 2,
+        tip: "Zoji La is one of the highest mountain passes in India and is vital for military and civilian movement."
+      },
+      {
+        question: "Which is the largest freshwater lake in India?",
+        options: ["Vembanad", "Chilika", "Wular", "Loktak"],
+        answer: 2,
+        tip: "Wular Lake in Jammu & Kashmir is among Asia's largest freshwater lakes."
+      }
     ];
 
-    // --- State Variables ---
-    let allIndexes = Array.from(questions.keys());
-    let usedIndexes = [];
-    let currentSessionIndexes = [];
+    // For this set, we'll show all questions in one session
+    let currentSessionIndexes = Array.from(questions.keys());
     let currentQuestion = 0;
     let score = 0;
     let answered = false;
-    let sectionStats = {};
+    let userAnswers = [];
 
-    // --- Utility Functions ---
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
-      return array;
-    }
-
-    function pickNext10Indexes() {
-      const remainingIndexes = allIndexes.filter(idx => !usedIndexes.includes(idx));
-      const next10 = remainingIndexes.slice(0, 10);
-      if (next10.length < 10) {
-        usedIndexes = [];
-        return pickNext10Indexes();
-      }
-      return next10;
+    // Infer section from question content for display/PDF
+    function inferSection(q) {
+      if (q.question.toLowerCase().includes("river")) return "Rivers";
+      if (q.question.toLowerCase().includes("state")) return "States";
+      if (q.question.toLowerCase().includes("capital")) return "Capitals";
+      if (q.question.toLowerCase().includes("mountain pass")) return "Mountains";
+      if (q.question.toLowerCase().includes("lake")) return "Lakes";
+      return "General";
     }
 
     function showQuestion() {
       answered = false;
       const q = questions[currentSessionIndexes[currentQuestion]];
+      const section = inferSection(q);
       document.getElementById('question').innerHTML =
-        `<div class="section-header">Section: ${q.section}</div>Q${currentQuestion+1}: ${q.question}`;
+        `<div class="section-header">Section: ${section}</div>Q${currentQuestion+1}: ${q.question}`;
       const optionsDiv = document.getElementById('options');
       optionsDiv.innerHTML = '';
       q.options.forEach((option, idx) => {
@@ -118,21 +103,21 @@
       answered = true;
       const qIdx = currentSessionIndexes[currentQuestion];
       const q = questions[qIdx];
+      userAnswers[currentQuestion] = selectedIdx;
       const optionsDiv = document.getElementById('options');
       Array.from(optionsDiv.children).forEach((b, idx) => {
         b.disabled = true;
         if(idx === q.answer) b.style.background = '#a5d6a7';
         if(idx === selectedIdx && idx !== q.answer) b.style.background = '#ef9a9a';
       });
-      if (!sectionStats[q.section]) sectionStats[q.section] = { correct: 0, total: 0 };
-      sectionStats[q.section].total++;
+      let resultMsg = '';
       if (selectedIdx === q.answer) {
-        document.getElementById('result').innerHTML = '<span style="color:green;">Correct!</span>';
+        resultMsg = '<span style="color:green;">Correct!</span>';
         score++;
-        sectionStats[q.section].correct++;
       } else {
-        document.getElementById('result').innerHTML = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
+        resultMsg = `<span style="color:red;">Wrong!</span> The correct answer is: <b>${q.options[q.answer]}</b>`;
       }
+      document.getElementById('result').innerHTML = resultMsg + `<div class="tip">${q.tip}</div>`;
       document.getElementById('nextBtn').style.display = 'inline-block';
       if(currentQuestion === currentSessionIndexes.length - 1) {
         document.getElementById('nextBtn').textContent = "Show Score";
@@ -151,40 +136,22 @@
     };
 
     function showResult() {
-      usedIndexes = usedIndexes.concat(currentSessionIndexes);
-      let heatmapHTML = `<div class="heatmap"><h3>Section-wise Performance</h3>`;
-      for (const section in sectionStats) {
-        const stat = sectionStats[section];
-        const percent = stat.total ? Math.round((stat.correct / stat.total) * 100) : 0;
-        let color = "#ef9a9a"; // red
-        if (percent >= 80) color = "#a5d6a7"; // green
-        else if (percent >= 50) color = "#fff59d"; // yellow
-        heatmapHTML += `
-          <div class="heatmap-bar">
-            <span class="heatmap-label">${section}</span>
-            <div class="heatmap-value" style="background:${color};width:${percent*2}px"></div>
-            <span style="margin-left:8px;">${percent}%</span>
-          </div>
-        `;
-      }
-      heatmapHTML += `</div>`;
       document.getElementById('quizContainer').innerHTML =
         `<h2>Quiz Completed!</h2>
          <p class="score">Your Score: ${score} / ${currentSessionIndexes.length}</p>
-         ${heatmapHTML}
-         <button id="nextQuizBtn">Next 10 Questions</button>
+         <button id="restartBtn">Restart Quiz</button>
          <button id="downloadPdfBtn" style="margin-left: 10px;">Download PDF</button>
         `;
-      document.getElementById('nextQuizBtn').onclick = resetQuiz;
+      document.getElementById('restartBtn').onclick = resetQuiz;
       document.getElementById('downloadPdfBtn').onclick = downloadPDF;
     }
 
     function resetQuiz() {
-      currentSessionIndexes = shuffle(pickNext10Indexes());
+      currentSessionIndexes = Array.from(questions.keys());
       currentQuestion = 0;
       score = 0;
       answered = false;
-      if (usedIndexes.length === 0) sectionStats = {};
+      userAnswers = [];
       document.getElementById('quizContainer').innerHTML = `
         <div id="question" class="question"></div>
         <div id="options" class="options"></div>
@@ -214,11 +181,12 @@
       for (let i = 0; i < currentSessionIndexes.length; i++) {
         const qIdx = currentSessionIndexes[i];
         const q = questions[qIdx];
+        const section = inferSection(q);
 
         // Section header
         doc.setFontSize(14);
         doc.setTextColor("#007bff");
-        doc.text(`Section: ${q.section}`, 14, y);
+        doc.text(`Section: ${section}`, 14, y);
         y += 8;
 
         // Question text
@@ -238,6 +206,16 @@
           y += splitOption.length * 7;
         });
 
+        // Tip
+        if (q.tip) {
+          doc.setFontSize(11);
+          doc.setTextColor("#666");
+          const tipText = "Tip: " + q.tip;
+          const splitTip = doc.splitTextToSize(tipText, 180);
+          doc.text(splitTip, 14, y);
+          y += splitTip.length * 7;
+        }
+
         y += 6; // extra spacing
 
         if (y > pageHeight - 30) {
@@ -250,7 +228,6 @@
     }
 
     // --- Initialize the quiz on page load ---
-    allIndexes = shuffle(allIndexes);
     resetQuiz();
   </script>
 </body>
