--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -29,54 +29,118 @@
     <button id="nextBtn" class="next-btn" style="display:none;">Next</button>
   </div>
   <script>
-    // The new questions with tips
     const questions = [
       {
-        question: "Which river is known as the 'Dakshina Ganga' or 'Ganga of the South'?",
-        options: ["Godavari", "Krishna", "Cauvery", "Mahanadi"],
-        answer: 0,
-        tip: "The Godavari is the second longest river in India and is revered in the south much like the Ganga in the north."
+        "question": "Which Indian state is the largest producer of onions?",
+        "options": ["Maharashtra", "Gujarat", "Karnataka", "Madhya Pradesh"],
+        "answer": 0,
+        "tip": "Maharashtra contributes the most to India's onion output."
       },
       {
-        question: "Which Indian state shares its borders with the maximum number of other states?",
-        options: ["Madhya Pradesh", "Uttar Pradesh", "Chhattisgarh", "Bihar"],
-        answer: 1,
-        tip: "Uttar Pradesh touches 9 states and Nepal—making it India's most 'connected' state by borders!"
+        "question": "Which Indian city is known as the 'City of Lakes'?",
+        "options": ["Bhopal", "Udaipur", "Nainital", "Srinagar"],
+        "answer": 1,
+        "tip": "Udaipur is famous for its picturesque lakes."
       },
       {
-        question: "What is the capital of Arunachal Pradesh?",
-        options: ["Itanagar", "Dispur", "Aizawl", "Imphal"],
-        answer: 0,
-        tip: "Itanagar is named after the historical Ita Fort, meaning 'fort of bricks'."
+        "question": "Which river is called the 'Sorrow of Bengal'?",
+        "options": ["Ganga", "Damodar", "Hooghly", "Teesta"],
+        "answer": 1,
+        "tip": "Damodar River is notorious for its floods in Bengal."
       },
       {
-        question: "Which mountain pass connects Srinagar to Leh?",
-        options: ["Nathu La", "Rohtang Pass", "Zoji La", "Shipki La"],
-        answer: 2,
-        tip: "Zoji La is one of the highest mountain passes in India and is vital for military and civilian movement."
+        "question": "Which Indian state has the longest coastline?",
+        "options": ["Andhra Pradesh", "Tamil Nadu", "Gujarat", "Maharashtra"],
+        "answer": 2,
+        "tip": "Gujarat has the longest coastline among Indian states."
       },
       {
-        question: "Which is the largest freshwater lake in India?",
-        options: ["Vembanad", "Chilika", "Wular", "Loktak"],
-        answer: 2,
-        tip: "Wular Lake in Jammu & Kashmir is among Asia's largest freshwater lakes."
+        "question": "Which mountain range forms the eastern boundary of the Deccan Plateau?",
+        "options": ["Aravalli", "Eastern Ghats", "Western Ghats", "Satpura"],
+        "answer": 1,
+        "tip": "The Eastern Ghats run parallel to the east coast of India."
+      },
+      {
+        "question": "Which Indian state is the largest producer of turmeric?",
+        "options": ["Andhra Pradesh", "Tamil Nadu", "Odisha", "Karnataka"],
+        "answer": 0,
+        "tip": "Andhra Pradesh leads in turmeric production in India."
+      },
+      // --- Newly added questions below ---
+      {
+        "question": "Which Indian state has no coastline and no international frontiers?",
+        "options": ["Madhya Pradesh", "Chhattisgarh", "Jharkhand", "Haryana"],
+        "answer": 0,
+        "tip": "Madhya Pradesh is landlocked and does not share a border with any other country or the sea."
+      },
+      {
+        "question": "The Ranchi, Hazaribagh, and Kodarma plateaus collectively form which region?",
+        "options": ["Malwa Plateau", "Deccan Plateau", "Chota Nagpur Plateau", "Baghelkhand Plateau"],
+        "answer": 2,
+        "tip": "Chota Nagpur Plateau is rich in minerals and lies in eastern India."
+      },
+      {
+        "question": "Which mountain range forms the boundary between India and Myanmar?",
+        "options": ["Himalayas", "Rakhine Mountains", "Aravalli Range", "Western Ghats"],
+        "answer": 1,
+        "tip": "Rakhine (Arakan) Mountains include the Naga, Chin, and Mizo hills."
+      },
+      {
+        "question": "What is the predominant type of soil found in the Indo-Gangetic Plain?",
+        "options": ["Black soil", "Red soil", "Alluvial soil", "Laterite soil"],
+        "answer": 2,
+        "tip": "Alluvial soil is fertile and supports intensive agriculture."
+      },
+      {
+        "question": "Which of the following coal fields is located in Jharkhand?",
+        "options": ["Raniganj", "Jharia", "Talcher", "Korba"],
+        "answer": 1,
+        "tip": "Jharia is famous for high-quality coking coal."
+      },
+      {
+        "question": "Which is the largest river system among the Deccan system of rivers?",
+        "options": ["Godavari", "Krishna", "Cauvery", "Mahanadi"],
+        "answer": 0,
+        "tip": "Godavari is the longest river in South India."
+      },
+      {
+        "question": "Which is the largest completed hydroelectric plant in India?",
+        "options": ["Tehri", "Koyna", "Srisailam", "Bhakra Nangal"],
+        "answer": 1,
+        "tip": "Koyna Hydroelectric Project is in Maharashtra."
+      },
+      {
+        "question": "The Bhakra Nangal Dam is built on which river?",
+        "options": ["Beas", "Sutlej", "Ganga", "Yamuna"],
+        "answer": 1,
+        "tip": "Bhakra Nangal is one of the highest gravity dams in the world."
+      },
+      {
+        "question": "Which is the tallest hydropower project in India?",
+        "options": ["Tehri Dam", "Sardar Sarovar", "Nagarjuna Sagar", "Hirakud"],
+        "answer": 0,
+        "tip": "Tehri Dam is the tallest hydropower project in India."
       }
+      // Add more questions here as needed
     ];
 
-    // For this set, we'll show all questions in one session
     let currentSessionIndexes = Array.from(questions.keys());
     let currentQuestion = 0;
     let score = 0;
     let answered = false;
     let userAnswers = [];
 
-    // Infer section from question content for display/PDF
     function inferSection(q) {
       if (q.question.toLowerCase().includes("river")) return "Rivers";
       if (q.question.toLowerCase().includes("state")) return "States";
-      if (q.question.toLowerCase().includes("capital")) return "Capitals";
-      if (q.question.toLowerCase().includes("mountain pass")) return "Mountains";
-      if (q.question.toLowerCase().includes("lake")) return "Lakes";
+      if (q.question.toLowerCase().includes("city")) return "Cities";
+      if (q.question.toLowerCase().includes("mountain")) return "Mountains";
+      if (q.question.toLowerCase().includes("coastline")) return "Coastlines";
+      if (q.question.toLowerCase().includes("plateau")) return "Plateaus";
+      if (q.question.toLowerCase().includes("producer")) return "Agriculture";
+      if (q.question.toLowerCase().includes("dam") || q.question.toLowerCase().includes("hydro")) return "Dams & Hydropower";
+      if (q.question.toLowerCase().includes("soil")) return "Soils";
+      if (q.question.toLowerCase().includes("coal")) return "Minerals";
       return "General";
     }
 
